<resources>
    <string name="app_name">Social Movie Club</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="title_activity_movie_post">Movie Title</string>
    <string name="check_out_movie_btn">CHECK IT OUT!</string>
    <string name="lets_party_btn">LETS PARTY!</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_party_event">PartyEventActivity</string>
    <string name="title">Title</string>
    <string name="venue">Venue</string>
    <string name="location">Location</string>
    <string name="rating">Rating</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="year">Year</string>
    <string name="time">Time</string>
    <string name="genre">Genre</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>
    <string name="event_title">Event Title</string>
    <string name="invitee">Invitee</string>

    <string name="hello_world">Hello world!</string>
    <string name="imdb_rating">IMDB Rating</string>
    <string name="create_event">Create An Event</string>
    <string name="plot">Plot</string>
    <string name="add_contact">Invite Friends</string>
    <string name="your_rating">Your Rating</string>
</resources>
