<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="@drawable/listview_layout_bg"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_mvPoster"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="8dp"
        android:src="@mipmap/minions" />


    <TextView
        android:id="@+id/tv_mvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_alignTop="@+id/iv_mvPoster"
        android:layout_toRightOf="@+id/iv_mvPoster"
        android:textSize="@dimen/title"
        android:textColor="@color/title"
        android:textStyle="bold"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/tv_mvGenre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/genre"
        android:textSize="@dimen/genre"
        android:text="@string/genre"
        android:layout_alignBottom="@+id/iv_mvPoster"
        android:layout_alignLeft="@+id/tv_mvTitle"
        android:layout_alignStart="@+id/tv_mvTitle" />

    <TextView
        android:id="@+id/tv_mvYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/year"
        android:textSize="@dimen/year"
        android:text="@string/year"
        android:layout_below="@+id/tv_mvTitle"
        android:layout_toRightOf="@+id/iv_mvPoster"
        android:layout_toEndOf="@+id/iv_mvPoster" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@mipmap/ic_star_rate_black_18dp"
        android:layout_alignTop="@+id/tv_mvGenre"
        android:layout_alignRight="@+id/tv_mvGenre"
        android:layout_alignEnd="@+id/tv_mvGenre" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="7.8"
        android:id="@+id/tv_imdbrating"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_toLeftOf="@+id/imageView2"
        android:layout_toStartOf="@+id/imageView2" />

</RelativeLayout>