<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="@drawable/material_frame"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_event_thumb"
        android:layout_width="@dimen/event_thumb_width"
        android:layout_height="@dimen/event_thumb_height"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="@dimen/event_thumb_margin_right"
        android:src="@mipmap/ic_event_black_24dp" />


    <TextView
        android:id="@+id/tv_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_alignTop="@+id/iv_event_thumb"
        android:layout_toRightOf="@+id/iv_event_thumb"
        android:textSize="@dimen/title"
        android:textColor="@color/title"
        android:textStyle="bold"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/tv_evVenue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/genre"
        android:textSize="@dimen/genre"
        android:text="@string/venue"
        android:layout_below="@+id/tv_event_name"
        android:layout_toRightOf="@+id/iv_event_thumb"
        android:layout_toEndOf="@+id/iv_event_thumb" />

    <TextView
        android:id="@+id/tv_evDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/year"
        android:textSize="@dimen/year"
        android:text="@string/date"
        android:layout_below="@+id/tv_eventrating"
        android:layout_alignLeft="@+id/tv_evVenue"
        android:layout_alignStart="@+id/tv_evVenue" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@mipmap/ic_star_rate_black_18dp"
        android:layout_alignTop="@+id/tv_evVenue"
        android:layout_alignRight="@+id/tv_evVenue"
        android:layout_alignEnd="@+id/tv_evVenue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="7.8"
        android:id="@+id/tv_eventrating"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_toLeftOf="@+id/imageView2"
        android:layout_toStartOf="@+id/imageView2" />

</RelativeLayout>